--- a/Demos/index.html
+++ b/Demos/index.html
@@ -18,6 +18,10 @@
 	<script src="../Tests/mootools-core/Source/Element/Element.js" type="text/javascript"></script>
 	<script src="../Tests/mootools-core/Source/Request/Request.js" type="text/javascript"></script>
 	<script src="../Tests/utils/Request.XML.js" type="text/javascript"></script>
+	<script src="../Tests/utils/URI.js" type="text/javascript"></script>
+	<script src="../Tests/sheet.js/Source/sg-regex-tools.js" type="text/javascript"></script>
+	<script src="../Tests/sheet.js/Source/SheetParser.CSS.js" type="text/javascript"></script>
+	<script src="../Tests/utils/Sheet.Cascade.js" type="text/javascript"></script>
 	<script src="../Tests/art/Color/Source/Color.js" type="text/javascript"></script>
 	<script src="../Tests/art/Source/ART.js" type="text/javascript"></script>
 	<script src="../Tests/art/Source/ART.VML.js" type="text/javascript"></script>
@@ -27,7 +31,14 @@
 	<script src="../Tests/art/Source/ART.Shapes.js" type="text/javascript"></script>
 	<script src="../Tests/art/Source/ART.Font.js" type="text/javascript"></script>
 	<script src="../Source/ART.SVG.Parser.js" type="text/javascript"></script>
+	<script src="../Source/ART.SVG.Parser.Externals.js" type="text/javascript"></script>
+	<script src="../Source/ART.SVG.Parser.Colors.js" type="text/javascript"></script>
+	<script src="../Source/ART.SVG.Parser.Fonts.js" type="text/javascript"></script>
+	<script src="../Source/ART.SVG.Parser.Markers.js" type="text/javascript"></script>
+	<script src="../Source/ART.SVG.Parser.Paints.js" type="text/javascript"></script>
 	<script src="../Source/ART.SVG.Parser.Shapes.js" type="text/javascript"></script>
+	<script src="../Source/ART.SVG.Parser.Styles.js" type="text/javascript"></script>
+	<script src="../Source/ART.SVG.Parser.Text.js" type="text/javascript"></script>
 	<script src="svgviewer.js" type="text/javascript"></script>
 </body>
 </html>
