--- a/Demos/index.html
+++ b/Demos/index.html
@@ -22,12 +22,12 @@
 	<script src="../Tests/sheet.js/Source/sg-regex-tools.js" type="text/javascript"></script>
 	<script src="../Tests/sheet.js/Source/SheetParser.CSS.js" type="text/javascript"></script>
 	<script src="../Tests/utils/Sheet.Cascade.js" type="text/javascript"></script>
-	<script src="../Tests/art/Color/Source/Color.js" type="text/javascript"></script>
 	<script src="../Tests/art/Source/ART.js" type="text/javascript"></script>
+	<script src="../Tests/art/Source/ART.Color.js" type="text/javascript"></script>
+	<script src="../Tests/art/Source/ART.Path.js" type="text/javascript"></script>
 	<script src="../Tests/art/Source/ART.VML.js" type="text/javascript"></script>
 	<script src="../Tests/art/Source/ART.SVG.js" type="text/javascript"></script>
 	<script src="../Tests/art/Source/ART.Base.js" type="text/javascript"></script>
-	<script src="../Tests/art/Source/ART.Path.js" type="text/javascript"></script>
 	<script src="../Tests/art/Source/ART.Shapes.js" type="text/javascript"></script>
 	<script src="../Tests/art/Source/ART.Font.js" type="text/javascript"></script>
 	<script src="../Source/ART.SVG.Parser.js" type="text/javascript"></script>
