Added support for converting SVG Fonts into ART Scripts

--- a/Converter/index.html
+++ b/Converter/index.html
@@ -23,11 +23,15 @@
 	<script src="../Tests/art/Source/ART.Color.js"></script>
 	<script src="../Tests/art/Source/ART.Path.js"></script>
 
+	<script src="../Tests/art/Source/ART.VML.js"></script>
+
 	<script src="assets/art-script/Source/ART.Script.js"></script>
 	<script src="assets/art-script/Source/ART.Base.Script.js"></script>
 
 	<script src="../Tests/art/Source/ART.Shapes.js"></script>
 	<script src="../Tests/art/Source/ART.Font.js"></script>
+
+	<script src="assets/art-script/Source/ART.Font.Script.js"></script>
 
 	<script src="../Tests/utils/Request.XML.js" type="text/javascript"></script>
 	<script src="../Tests/utils/URI.js" type="text/javascript"></script>
