--- a/Converter/index.html
+++ b/Converter/index.html
@@ -4,8 +4,6 @@
 <title>SVG to ART Script Converter</title>
 </head>
 <body>
-	<script src="assets/art-script/Demos/assets/mootools-with-cast-patch.js"></script>
-
 	<script src="assets/ast-js/Source/AST.js"></script>
 	<script src="assets/ast-js/Source/AST.Statement.js"></script>
 	<script src="assets/ast-js/Source/AST.Expression.js"></script>
@@ -33,8 +31,9 @@
 
 	<script src="assets/art-script/Source/ART.Font.Script.js"></script>
 
-	<script src="../Tests/utils/Request.XML.js" type="text/javascript"></script>
-	<script src="../Tests/utils/URI.js" type="text/javascript"></script>
+	<script src="../Tests/slick/Source/Slick.Parser.js" type="text/javascript"></script>
+	<script src="../Tests/slick/Source/Slick.Finder.js" type="text/javascript"></script>
+
 	<script src="../Tests/sheet.js/Source/sg-regex-tools.js" type="text/javascript"></script>
 	<script src="../Tests/sheet.js/Source/SheetParser.CSS.js" type="text/javascript"></script>
 	<script src="../Tests/utils/Sheet.Cascade.js" type="text/javascript"></script>
